# mcp

./: README.md
doc-agent/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
doc-agent/src/doc_agent/: server.py  source_resolver.py
doc-agent/src/doc_agent/analyzer/: architecture_analyzer.py
doc-agent/src/doc_agent/documentation_engine/: architecture_report.py  azure_openai.py  readme_generator.py
doc-agent/src/doc_agent/template_engine/: markdown.py
doc-agent/src/doc_agent/tools/: analisar_arquitetura.py  gerar_readme.py
doc-agent/tests/: test_architecture_analyzer.py  test_architecture_report.py  test_azure_openai.py  test_project_scanner.py  test_readme_generator.py  test_source_resolver.py
doc-agent/tests/fixtures/: SampleApi.csproj  SampleController.cs
doc-agent/tests/fixtures_architecture/clean_architecture_with_violation/Application/: Application.csproj
doc-agent/tests/fixtures_architecture/mvc_layered/Controllers/: HomeController.cs
specops/: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
specops/src/specops/: server.py  source_resolver.py
specops/src/specops/analyzer/: architecture_analyzer.py  project_scanner.py
specops/src/specops/documentation_engine/: architecture_report.py  readme_generator.py
specops/src/specops/static/: index.html
specops/src/specops/tools/: analisar_arquitetura.py  gerar_readme.py
specops/tests/: test_architecture_analyzer.py  test_architecture_report.py  test_project_scanner.py  test_readme_generator.py  test_source_resolver.py
(+5 files in other folders)
